<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <Button 
        android:id="@+id/autoLocate"
        android:text="@string/autoLocate"
        android:textSize="18sp"
        android:textColor="#333333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="20dp"
	    android:text="@string/or"
	    android:textSize="20sp"/>
    
	<EditText 
	    android:id="@+id/editLocate"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/inputRoom"
	    android:textColor="#333333"
	    android:layout_marginBottom="10dp"/>
	
	<Button 
        android:id="@+id/manualLocate"
        android:text="@string/manualLocate"
        android:textSize="18sp"
        android:textColor="#333333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	
</LinearLayout>
